# FSE4AI-2025-Final-Project

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build_sys.yml  ci.yml
src/: interface.html  model.py  routes.py
tests/: test_app.py
